k8s/local/postgresql-deployment.local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgresql-persistentvolumeclaim
      containers:
      - name: postgresql
        image: postgres:14
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: data
